--- a/YcceMechProj/WebContent/assets/css/styles.css
+++ b/YcceMechProj/WebContent/assets/css/styles.css
@@ -67,7 +67,6 @@ body{
     opacity: 1;
 }
 
-
 .fade.ng-leave {
 	-webkit-transition: all 0.1s ease-in-out;
 	transition: all 0.1s ease-in-out;
@@ -86,14 +85,17 @@ body{
     opacity: 1;
 }
 
-
+.fade2 .* {
+	transition: all 10ms;
+	-webkit-transition: all 10ms;
+}
 .fade2.ng-leave {
-	-webkit-transition: all 0.01s ease-in-out !important;
-	transition: all 0.01s ease-in-out !important;
+	-webkit-transition: all 0s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+	transition: all 0s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 .fade2.ng-enter{
-	-webkit-transition: all 0.01s ease-in-out;
-	transition: all 0.01s ease-in-out;
+	-webkit-transition:all 2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+	transition: all 2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
 .fade.ng-enter,.fade2.ng-enter {
