--- a/YcceMechProj/WebContent/assets/css/styles.css
+++ b/YcceMechProj/WebContent/assets/css/styles.css
@@ -77,12 +77,13 @@ body{
 }
 
 .fade2 {
-    position: absolute;
-    top: 13em;
-    left: 24em;
+	position: absolute;
+    top: 2em;
+    left: 1em;
     right: 0;
     height: 80%;
     opacity: 1;
+    display: none;
 }
 
 .fade2 .* {
