--- a/YcceMechProj/WebContent/assets/css/styles.css
+++ b/YcceMechProj/WebContent/assets/css/styles.css
@@ -30,6 +30,10 @@
 	-webkit-transition: all 400ms;
 }
 
+.cursor-pointer{
+	cursor: pointer;
+}
+
 .breadcrumb {
     display: -ms-flexbox;
     display: flex;
