--- a/YcceMechProj/WebContent/assets/css/styles.css
+++ b/YcceMechProj/WebContent/assets/css/styles.css
@@ -21,7 +21,7 @@
 ::-webkit-scrollbar-thumb {
 	border-radius: 5px;
 	-webkit-box-shadow: inset 0 0 10px #ffffff;
-	background-color: #818181;
+	background-color: #b9b9b9;
 	border-radius: 20px;
 }
 /* COMMON */
@@ -30,7 +30,19 @@
 	-webkit-transition: all 400ms;
 	border-radius: 0.2em;
 }
-
+.border{
+	border-radius: 0.5em;
+    border: 0.1em solid #a7a7a7;
+    padding: 1em;
+    margin: 1em;
+}
+.img-border{
+	border-radius: 0.5em;
+    border: 0.1em solid #a7a7a7;
+    box-shadow: 5px 10px 18px #c1c1c1;
+    width: 38em;
+    height: 38em;
+}
 .max-width-100{
     max-width: 100%;	
 }
@@ -221,7 +233,17 @@ body{
 }
 
 /** NAVBAR */
+.home{
+	display: none;
+}
+.home-none{
+	display: block;
+}
 
+.sticky-top{
+	box-shadow: 0.5em 0.5em 0.4em 0px #0a0a0a3d;
+}
+   
 @media (max-width: 768px){
 	.fade {
 	    /* position: absolute !important;
@@ -244,10 +266,10 @@ body{
 	}
 	.navbar-light .navbar-toggler {
 	    color: rgba(0,0,0,.5);
-	    border-color: #818181;
+	    border-color: #b9b9b9;
 	}
 	.bar1, .bar2, .bar3 {
-	    background-color: #818181 !important;
+	    background-color: #b9b9b9 !important;
 	}
 	/* .fade {
 	    position: absolute !important;
@@ -267,7 +289,19 @@ body{
 	    opacity: 1 !important;
 	    width: 75% !important;
 	}
-
+	.home{
+	    text-decoration: none;
+    	color: #b9b9b9;
+		display: block;
+		opacity: 1 !important;
+    }
+    .home-none{
+	    display: none;
+    }
+    .img-border{
+	    width: 100% !important;
+	    height: 100% !important;
+	}
 }
 .navbar-toggler {
 	padding: .1rem .7rem;
@@ -279,7 +313,7 @@ body{
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: #818181;
+    color: #b9b9b9;
 }
 
 @media (min-width: 768px){
@@ -365,7 +399,7 @@ body{
     /* z-index: 1; */
     /* top: 0; */
     /* left: 0; */
-    background-color: #111;
+    background-color: #343a40!important;
     /* overflow-x: hidden; */
     padding: 1em;
 }
@@ -374,7 +408,7 @@ body{
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #b9b9b9;
   display: block;
 }
 
@@ -387,7 +421,7 @@ body{
 	    height: 33em !important;
 	}
 	.main{
-	    max-height: 33em !important;
+	    max-height: 36em !important;
 	    overflow: auto !important;
 	}
 	body {
